Fix AngularJs template flicker.

--- a/Resources/public/css/ongr-translations.css
+++ b/Resources/public/css/ongr-translations.css
@@ -13,3 +13,6 @@
 .inline-edit.active div {
     display: table;
 }
+[ng-cloak] {
+    display: none !important;
+}
